<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAlcolemia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/alcolemia"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAlcolemiaUtente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text=""
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvAlcolemia"
                app:layout_constraintStart_toEndOf="@+id/tvAlcolemia" />

            <TextView
                android:id="@+id/tvGl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/g_l"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvAlcolemiaUtente"
                app:layout_constraintStart_toEndOf="@+id/tvAlcolemiaUtente" />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/data"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvAlcolemia"
                app:layout_constraintTop_toBottomOf="@+id/tvAlcolemia" />

            <TextView
                android:id="@+id/tvDataUtente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@+id/tvData"
                app:layout_constraintStart_toEndOf="@+id/tvData" />

            <TextView
                android:id="@+id/tvKg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/kg"
                app:layout_constraintBottom_toBottomOf="@+id/tvPesoUtente"
                app:layout_constraintStart_toEndOf="@+id/tvPesoUtente" />

            <TextView
                android:id="@+id/tvPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/peso_duePunti"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvData"
                app:layout_constraintTop_toBottomOf="@+id/tvData" />

            <TextView
                android:id="@+id/tvPesoUtente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@+id/tvPeso"
                app:layout_constraintStart_toEndOf="@+id/tvPeso" />

            <TextView
                android:id="@+id/tvListaAlcolici"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/lista_alcolici"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPeso" />

            <TextView
                android:id="@+id/tvAlcolici"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvListaAlcolici" />

            <ImageView
                android:id="@+id/imageView5"
                android:scaleX="-1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/uomo_etilometro" />

            <!-- <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Piu1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>